# affiliate-market

./: Anchor.toml  Cargo.toml
programs/affiliate-market/: Cargo.toml
programs/affiliate-market/src/: error.rs  lib.rs  state.rs
programs/affiliate-market/src/instructions/: mod.rs
programs/affiliate-market/src/instructions/affiliate/: mod.rs  process_affiliate.rs
programs/affiliate-market/src/instructions/campaign/: create_campaign.rs  mod.rs
programs/affiliate-market/src/md-instructions/: claude.rs  gpt.rs  gpt2.rs  libClaude.rs  openAiLib.rs
tests/: affiliate-market.ts
