[package]
name = "affiliate-market"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "affiliate_market"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = {version="0.31.1",features = ["init-if-needed"] }
anchor-spl = "0.31.1"
mpl-token-metadata = { version = "5.1.0"}
solana-program = "3.0.0"
spl-token = "8.0.0"

